@@ -36,6 +36,7 @@ dgm-lib v3.0.0
     * `getInputValue`/`isInputToggled` replaced with `readAnalog`/`readDigital`
     * `update` method was removed
     * bindings for supported gamepads can be resolved via `translateGamepadCode` function
+ * `dgm::GenericMesh` has deleted copy constructor and an explicit `clone`method
  * Compilation for Android is supported
  * SFML bumped to v3.0.0
 	* `dgm::Camera` dropped all methods that used separate x, y coordinates in favor of `sf::Vector` versions
